--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ PORT=8015
 DSN=the-username:the-password@tcp(the.host.local:3306)/the_db_name?charset=utf8mb4&parseTime=True&loc=Local
 
 LIMIT_UPLOAD_SIZE=50
+
+BASE_UPLOAD_FOLDER=/home/eeg-admin/eeg-data-store/storage/app/public
